@@ -23,8 +23,6 @@ fi
 JAVA_OPTS="$JAVA_OPTS
 -Xms2048M
 -Xmx2048M
--XX:PermSize=128m
--XX:MaxPermSize=256m
 -Dpython.cachedir=$MIDPOINT_HOME/tmp
 -Djavax.net.ssl.trustStore=$MIDPOINT_HOME/keystore.jceks
 -Djavax.net.ssl.trustStoreType=jceks
